# studia-bluepill-pwrtest

./: .cproject  .gitmodules  .project  CMakeLists.txt  Makefile
src/app/: main.c
stm32cubemx/bluepill-pwrtest/: .gitignore  .mxproject  Makefile  bluepill-pwrtest.ioc
stm32cubemx/bluepill-pwrtest/Inc/: iwdg.h  main.h  stm32f1xx_hal_conf.h
stm32cubemx/bluepill-pwrtest/Src/: main.c  rtc.c  usart.c
